# esp-idf-bmx280

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
.claude/skills/code-review/: SKILL.md  common-bugs.md  current_updates_suggestion.md  esp-idf-style.md  freertos-patterns.md  memory-safety.md  peripheral-drivers.md
.claude/skills/debug-session/: SKILL.md  patterns.md
.claude/skills/grill-me/: SKILL.md  architecture-topics.md  testing-observability.md
.claude/skills/update-skill/: SKILL.md  esp-idf-v6-breaking-changes.md
components/bme280/: CMakeLists.txt
components/bme280/include/: bmx280.h
components/bme280/src/: bmx280.c
components/rpm_unit/: CMakeLists.txt  rpm_unit.c
components/rpm_unit/include/: rpm_unit.h
inter-dash/: README.md  m-air-calculation.py  pyproject.toml
live-plot/: .gitignore  README.md  main.py  pyproject.toml  receiver.py  sender.py
main/: CMakeLists.txt  main.cpp
